# spotify_extension_lambda

./: .gitignore  Cargo.toml  build_lambda_function_executable.sh  buildspec.yml  docker-compose.yaml
.github/workflows/: cd.yaml  main.yml
docker/builder/: Dockerfile
infrastructure/: package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts  lambda-apigateway-stack.ts
src/: app_error.rs  auth_code.rs  common.rs  errors.rs  main.rs  middleware.rs  middlewares.rs  routes.rs  session.rs  user_client.rs
src/errors/: app_error.rs  spotify_contents_error.rs  spotify_error.rs  user_client_error.rs
src/middlewares/: cors_layer.rs  logging_request.rs
src/routes/: callback.rs  index.rs  login.rs
