[package]
name = "spotify_extension_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-web = { version = "0.1.8", features=["hyper"] }
axum = "0.4.8"
tokio = { version = "1" }
rspotify = "0.11.3"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
thiserror = "1.0.30"