[package]
name = "spotify_extension_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-web = { version = "0.2.0", features=["hyper"] }
axum = {version = "0.5.4", features=["headers"]}
tokio = { version = "1" }
rspotify = "0.11.3"
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.47", default-features = false, features = ["rustls"] }
serde_dynamo = { version = "4.0.1", features = ["rusoto_dynamodb+0_47"] }
thiserror = "1.0.30"
anyhow = "1.0.57"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19" 
serde = "1.0.136"
dotenv = "0.15.0"
serde_json = "1.0.81"
tower-http = { version = "0.3.0", features = ["cors"] }
log = "0.4.17"
env_logger = "0.9.1"
